added documentation for world package